added putting items on sale

--- a/templates/home.html
+++ b/templates/home.html
@@ -25,10 +25,12 @@
 		<div class="dropdown-content">
 			<a href="/account/orders">Your orders</a>
 			<a href="/account/profile">Your profile</a>
+			<a href="/add">Sell</a>
 			<hr>
 			<a href="/logout">Sign Out</a>
 		</div>
 	</div>
+
 	{% endif %}
 	<div id="kart">
 		<a class="link" href="/cart">
