--- a/templates/profilehome.html
+++ b/templates/profilehome.html
@@ -39,8 +39,7 @@
 </div>
 
 <div class="display">
-	<a href="/account/profile/view">View Profile</a><br>
-	<a href="/account/profile/edit">Edit Profile</a><br>
+	<a href="/account/profile/edit">View + Edit Profile</a><br>
 	<a href="/account/profile/changePassword">Change password</a>
 </div>
 </body>
