--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
 	</div>
 
 	{% endif %}
-	<div id="kart">
+	<div id="kart" style="margin-left: 85vw;">
 		<a class="link" href="/cart">
 			<img src={{url_for('static', filename='images/shoppingCart.png')}} id="cartIcon" />
 			CART {{noOfItems}}
@@ -40,8 +40,8 @@
 			<img id="logo" src= {{ url_for('static', filename='images/logo.png') }} />
 		</a>
 	</div>
-	<div class="pleasecenter">
-		<form id="center">
+	<div id="searchbar">
+		<form id="center" style="margin-left: -30vw;">
 			<input id="searchBox" type="text" name="searchQuery">
 			<input id="searchButton" type="submit" value="Search">
 		</form>
