--- a/templates/home.html
+++ b/templates/home.html
@@ -41,7 +41,7 @@
 		</a>
 	</div>
 	<div id="searchbar">
-		<form id="center" style="margin-left: -30vw;">
+		<form id="center">
 			<input id="searchBox" type="text" name="searchQuery">
 			<input id="searchButton" type="submit" value="Search">
 		</form>
