--- a/templates/profilehome.html
+++ b/templates/profilehome.html
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 	{% endif %}
-	<div id="kart">
+	<div id="kart" style="margin-left: 85vw;">
 		<a class="link" href="/cart">
 			<img src={{url_for('static', filename='images/shoppingCart.png')}} id="cartIcon" />
 			CART {{noOfItems}}
