--- a/templates/login.html
+++ b/templates/login.html
@@ -13,8 +13,8 @@
 	</div>
 <p> {{error}} </p>
 <form action="/login" method="POST">
-	<p>Email: <input type="text" name="email"></p>
-	<p>Password: <input type="password" name="password"></p>
+	<p style = "font-family:Helvetica, Arial, sans-serif;font-size:16px;">Email: <input type="text" name="email"></p>
+	<p style = "font-family:Helvetica, Arial, sans-serif;font-size:16px;">Password: <input type="password" name="password"></p>
 	<p><input type="submit"></p>
 	<a href="/registerationForm">Register here</a>
 </form>
