--- a/Allswap_django/allswap/products/templates/products/product_list.html
+++ b/Allswap_django/allswap/products/templates/products/product_list.html
@@ -4,19 +4,12 @@
 <div class = "col-md-8">
     <div class = "products-group">
         {% for product in product_list %}
-            <h5>{{product.name}}</h5>
-
             <div class = "list-product-item-text container-fluid">
-                {{product.description}}
-                <div class = "row">
-                    <div class = "col-md-4">
-                        {{product.price}}
-                    </div>
-                    <div class = "image">
-                        <img src="{% static "{{product.image}}" %}" alt="My image">
-             
-                    </div>
-                </div>
+                <td><ul><a href = "{{ product.get_absolute_url }}"><h5>{{product.name}}</h5></a></ul>
+                    <ul><img src= "{{ product.image.url }}" alt="My image" style="width:100px;height:100px"></ul>
+                    <ul>{{product.description}}</ul>         
+                    <ul>{{product.price}} </ul>s
+                </td>
             </div>
         {% endfor %}
     </div>
