--- a/Allswap_django/allswap/products/templates/products/product_list.html
+++ b/Allswap_django/allswap/products/templates/products/product_list.html
@@ -5,10 +5,11 @@
     <div class = "products-group">
         {% for product in product_list %}
             <div class = "list-product-item-text container-fluid">
-                <td><ul><a href = "{{ product.get_absolute_url }}"><h5>{{product.name}}</h5></a></ul>
+                <td><ul><a href = "{% url 'products:detail' slug=product.slug %}"><h5>Title: {{product.name}}</h5></a></ul>
                     <ul><img src= "{{ product.image.url }}" alt="My image" style="width:100px;height:100px"></ul>
-                    <ul>{{product.description}}</ul>         
-                    <ul>{{product.price}} </ul>s
+                    <ul>Course ID: {{product.courseID}}</ul>
+                    <ul>Description: {{product.description}}</ul>         
+                    <ul>Price: ${{product.price}} </ul>
                 </td>
             </div>
         {% endfor %}
