--- a/Allswap_django/allswap/products/templates/products/product_form.html
+++ b/Allswap_django/allswap/products/templates/products/product_form.html
@@ -1,12 +1,12 @@
-{% extends "product_base.html" %}
+{% extends "products/product_base.html" %}
 {% load bootstrap3 %}
 
-{%block post_content %}
-<h4>Upload your textbook!</h4>
-<form id = 'uploadForm' action = "{% url 'products:uploads' %}" method = "post">
+{%block products_content %}
+<h4>Upload your product!</h4>
+<form id = 'uploadForm' action = "{% url 'products:uploads' %}"  enctype="multipart/form-data" method = "POST">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <input type = "submit" value = "Post" class = 'btn btn-primary btn-large'>
+    <input type = "submit" value = "Submit" class = 'btn btn-primary btn-large'>
 </form>
 
 {% endblock %}
