working on user associated product page

--- a/Allswap_django/allswap/templates/base.html
+++ b/Allswap_django/allswap/templates/base.html
@@ -13,6 +13,7 @@
                 <a class = 'navbar-brand mynav' href = "{% url 'home' %}"><img src = "{% static 'images/logo.png' %}" style = "height:50px;width:90px"></a>
                 <ul class = 'nav navbar-nav navbar-right'>
                     {% if user.is_authenticated %}
+                        <li><a href = "{% url 'products:for_user' username=user.username %}">My Products</a></li>
                         <li><a href = "{% url 'products:list' %}">Products</a></li>
                         <li><a href = "{% url 'products:uploads' %}">Upload</a></li>
                         <li><a href = "#">Shopping Cart</a></li>
